2005-03-30  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimpwidgets.c (gimp_label_set_attributes): fixed
	copy-n-paste bug that affected PANGO_ATTR_SIZE.

2005-03-30  Sven Neumann  <sven@gimp.org>

	Merged from HEAD branch:

	* app/tools/gimpvectortool.c (gimp_vector_tool_status_update):
	set a different help message in polygonal mode. Fixes bug #172051.

2005-03-28  Sven Neumann  <sven@gimp.org>

	Merged from HEAD branch:

	* app/dialogs/resize-dialog.c (resize_dialog_new): handle
	gimp_viewable_get_pixbuf() returning NULL. Fixes bug #171827.

2005-03-25  Sven Neumann  <sven@gimp.org>

	Merged from HEAD branch:

	* plug-ins/bmp/bmpread.c: applied patch from David Costanzo that
	initializes unspecified pixels in RLE bitmaps. Fixes bug #171562.

2005-03-24  Sven Neumann  <sven@gimp.org>

	Merged from HEAD branch:

	* plug-ins/bmp/bmp.h (Bitmap_Head_Struct)
	* plug-ins/bmp/bmpread.c: use a signed long for width and height
	and check that width is > 0 (negative height is allowed and
	handled by our code). Fixes bug #171453.

2005-03-24  Sven Neumann  <sven@gimp.org>

	Merged from HEAD branch:

	* plug-ins/bmp/bmpread.c: applied a patch from David Costanzo that
	fixes handling of odd-length pixel encodings in "absolute mode" of
	RLE4 compressed data (bug #171306).

2005-03-24  Sven Neumann  <sven@gimp.org>

	Merged from HEAD branch:

	* app/display/gimpstatusbar.c (gimp_statusbar_push_coords) 
	(gimp_statusbar_set_cursor): use RINT() instead of ROUND() to get
	proper rounding of negative values. Fixes bug #171497.

2005-03-24  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimphistogrameditor.c: change to the Value channel
	if the current channel becomes invalid due to an image mode change.
	Fixes bug #170116.

2005-03-22  Sven Neumann  <sven@gimp.org>

	Merged from HEAD branch:

	* plug-ins/common/colortoalpha.c: unset "Keep transparency", it is
	not what the user wants if this plug-in is being used.

2005-03-21  Sven Neumann  <sven@gimp.org>
