@@ -1,3 +1,10 @@
+2005-04-01  Sven Neumann  <sven@gimp.org>
+
+	Merged from HEAD branch:
+
+	* plug-ins/rcm/rcm_dialog.c: keep the previews from expanding. Fixes
+	bug #172284.
+
 2005-03-30  Sven Neumann  <sven@gimp.org>
 
 	* libgimpwidgets/gimpwidgets.c (gimp_label_set_attributes): fixed
